--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,959 @@
+
+:root{
+  --blue: #1E426A;
+  --lightblue: #165689;
+  --bluepurple: #3D5696;
+  --darkgrey: #555763;
+  --offwhite: #F7F7F7;
+}
+
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: visible;
+}
+
+body,
 .App {
-  text-align: center;
+    width: 100%;
+    overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section{
+  padding: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.d-flex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul, li, a{
+  list-style: none;
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a{
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link{
+  color: var(--blue);
+  cursor: pointer;
 }
+
+label{
+  font-size: 0.8rem;
+}
+
+/* Header Styles */
+
+
+.header{
+  width: 100%;
+  height: 5rem;
+  background: var(--lightblue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.header-inside{
+  height: 100%;
+  width: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 999;
+
+}
+
+.comp-name{
+  color: white;
+  cursor: pointer;
+}
+
+.user-options{
+  display: flex;
+  width: 10.2rem;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.1rem;
+}
+
+.user-option p{
+  cursor: pointer;
+}
+
+.user-icon{
+  font-size: 1.7rem;
+}
+
+/* Main Page */
+.mainpg-container{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.banner-container{
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  position: relative;
+}
+
+.banner-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.banner-overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(30, 66, 106, 0.3);
+}
+
+.mainpg-inner{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainpg-text{
+  width: 75%;
+  margin-top: 8rem;
+  height: 20%;
+  font-size: 1.4rem;
+  color: white;
+}
+
+.search-flight-window{
+  width: 75%;
+  height: auto;
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 12px;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-bar{
+  width: 100%;
+  background: rgba(27, 27, 27, 0.784);
+  height: 3.5rem;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+}
+
+.nav-bar-items{
+  display: flex;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-tab{
+  padding: 0 1.5rem;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-tab.active{
+  background: white;
+  color: var(--blue);
+}
+
+.nav-tab.active.tab1{
+  border-top-left-radius: 0.5rem;
+}
+
+.search-flight-text{
+  height: 4rem;
+  width: 92%;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgba(116, 114, 114, 0.25);
+}
+
+.search-flight-form{
+  height: 12.5rem;
+  width: 92%;
+}
+
+.search-booking-form{
+  height: 8rem;
+  width: 92%;
+  display: flex;
+  align-items: center; 
+}
+
+.flight-type{
+  display: flex;
+  height: 20%;
+  align-items: center;
+}
+
+.flight-type li{
+  margin-right: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.flight-type li input{
+  height: 1.2rem;
+  width: 1.2rem;
+  accent-color: var(--lightblue);
+}
+
+.flight-type li label{
+  margin-left: 0.4rem;
+  color: black;
+}
+
+.flight-details{
+  height: 80%;
+}
+
+.row{
+  display: flex;
+  width: 100%;
+  height: 42%;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.route-info{
+  width: 50%;
+  display: flex;
+}
+
+.date-info{
+  width: 50%;
+  display: flex;
+}
+
+.route-info input{
+  height: 3rem;
+  width: 49%;
+  padding: 0 1rem;
+  border: 1px solid rgba(66, 64, 64, 0.25);
+}
+
+.date-info input{
+  height: 3rem;
+  width: 100%;
+  padding: 0 1rem;
+  border: 1px solid rgba(66, 64, 64, 0.25);
+}
+
+input::placeholder{
+  color: black;
+}
+
+.class-info, .passenger-num-info{
+  width: 39%;
+  height: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.booking-num, .passenger-last-name{
+  width: 39%;
+  height: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.deprature-info, .return-info{
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.class-info select, .passenger-num-info input, .booking-num input, .passenger-last-name input{
+  height: 3rem;
+  width: 100%;
+  border: 1px solid rgba(66, 64, 64, 0.25);
+  padding: 0 1rem;
+}
+
+.row.second button{
+  height: 3rem;
+  width: 18%;
+  border: none;
+  background: var(--lightblue);
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.row.second button:active{
+  background: var(--blue);
+}
+
+.row.second.booking{
+  height:auto;
+  align-items: center;
+}
+
+/* Footer */
+
+.footer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 2rem 6rem 0rem 6rem;
+  width: 100%;
+  background: var(--lightblue);
+  height: 15rem;
+}
+
+.footer .col{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0px 20px 10px 20px;
+  min-height: 9rem;
+
+}
+
+.install img, .install .row img{
+  height: 50px;
+  margin-bottom: 0.5rem;
+}
+
+.footer a{
+  color: white;
+  font-size: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+
+.footer p{
+  color: white;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+.footer h4{
+  margin-bottom:1.5rem;
+  font-size: 1.2rem;
+  color: white;
+}
+
+.icon{
+  padding: 0;
+}
+
+.footer h1{
+  margin-bottom: 1.3rem;
+  font-size: 2.3rem;
+}
+
+.footer .copyright{
+  width: 100%;
+  text-align: center;
+}
+
+.footer .social-icon{
+  cursor: pointer;
+  font-size: 1.4rem;
+  margin: 0 0.2rem;
+  color: white;
+  position: relative;
+}
+
+/* Registration Page */
+.reg-pg{
+  background: var(--offwhite);
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.reg-page-container{
+  height: 100%;
+  width: 60rem;
+  padding: 4rem 0;
+}
+
+.reg-text h1{
+  color: var(--blue);
+  margin-bottom: 1rem;
+}
+
+.reg-text p{
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+.registartion-form{
+  background: white;
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 0;
+}
+
+.signup-info{
+  width: 92%;
+}
+
+.signup-info h3{
+  color: var(--blue);
+  margin-bottom: 1rem;
+}
+
+.signup-info p{
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+.name-reg, .bd-reg, .residency-reg, .contact-reg, .phone-reg, .password-reg{
+  display: flex;
+  flex-direction: column;
+  width: 48%;
+  height: 4.5rem;
+  justify-content: space-between;
+}
+
+.name-reg input, .bd-reg input, .residency-reg input, .contact-reg input, .phone-reg input, .password-reg input{
+  height: 3rem;
+  width: 100%;
+  border: 1px solid rgba(66, 64, 64, 0.25);
+  padding: 0 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.row.registration{
+  height: 6rem;
+}
+
+#password-note{
+  margin-top: 1rem;
+  width: 50%;
+}
+
+.registration-optns{
+  width: 92%;
+  margin-top: 2rem;
+}
+
+.registration-optns h3{
+  color: var(--blue);
+  margin-bottom: 2rem;
+}
+
+.registration-optns p{
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+.promotional-eml-opts{
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.promotional-eml-opts input{
+  margin-right: 0.5rem;
+}
+
+.terms-ack{
+  background: #E4E9F0;
+  padding: 1rem;
+  display: flex;
+  align-items: flex-start;
+}
+
+.terms-ack label{
+  margin-left: 0.5rem;
+}
+
+input[type="checkbox"]{
+  height: 15px;
+  width: 15px;
+  accent-color: var(--lightblue);
+}
+
+#policy-ack-box{
+  height: 17px;
+  width: 17px;
+  accent-color: var(--lightblue);
+}
+
+.reg-button{
+  width: 92%;
+  height: 4rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.reg-button button{
+  padding: 0.7rem 1.2rem;
+  border: none;
+  color: white;
+  background: var(--lightblue);
+  cursor: pointer;
+}
+
+/* Login Overlay */
+
+.login-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background:rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.login-overlay-window{
+  width: 30rem;
+  height: 25rem;
+  background: white;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.close-login-overlay{
+  border: none;
+  background: none;
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  cursor: pointer;
+  font-size: 1.1rem;
+}
+
+.login-form{
+  width: 90%;
+  height: 85%;
+}
+
+.login-form h2{
+  margin-bottom: 1.5rem;
+}
+
+.membid-login, .password-login{
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.membid-login input, .password-login input{
+  height: 3rem;
+  width: 100%;
+  border: 1px solid rgba(66, 64, 64, 0.25);
+  padding: 0 1rem;
+}
+
+.membid-login label, .password-login label{
+  margin-bottom: 0.5rem;
+}
+
+.login-btn{
+  width: 100%;
+  padding: 1rem 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  border: none;
+  background: var(--lightblue);
+  color: white;
+  cursor: pointer;
+}
+
+/* Flights */
+.flights-pg{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.container{
+  width: 85%;
+  height: auto;
+  padding: 3rem 0;
+}
+
+.pg-title h1{
+  font-weight: 300;
+  font-size: 2.3rem;
+  margin-bottom: 2rem;
+}
+
+.pg-title h3{
+  margin-bottom: 1rem;
+}
+
+.pg-title p{
+  font-size: 0.9rem;
+}
+
+.dates-container{
+  width: 100%;
+  height: 4.5rem;
+  margin-top: 2rem;
+  display: flex;
+}
+
+.left-arrow-scroll, .right-arrow-scroll{
+  height: 100%;
+  width: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dates-list{
+  height: 100%;
+  width: 100%;
+  border-bottom: 1px solid rgba(151, 145, 145, 0.25);
+  border-top: 1px solid rgba(151, 145, 145, 0.25);
+  border-left: 1px solid rgba(151, 145, 145, 0.25);
+  display: flex;
+}
+
+.arrow{
+  font-size: 1.5rem;
+}
+
+.date{
+  height: 100%;
+  width: 11rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-right: 1px solid rgba(151, 145, 145, 0.25);
+}
+
+.date.active{
+  border-top: 3px solid var(--lightblue);
+}
+
+.date.active::after{
+  content: "";
+  height: 0.1rem;
+}
+
+.date h3{
+  font-size: 1rem;
+  margin-top: 0.5rem;
+}
+
+.classes-container{
+  width: 100%;
+  height: 3rem;
+  margin-top: 2.5rem;
+  background: var(--offwhite);
+}
+
+.class-list{
+  display: flex;
+  height: 100%;
+  gap: 0.3rem;
+}
+
+.class{
+  height: 100%;
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.class.econ{
+  background: var(--lightblue);
+}
+
+.class.comfort{
+  background: var(--darkgrey);
+}
+
+.class.business{
+  background: var(--bluepurple);
+}
+
+.flight-list{
+  width: 100%;
+  height: auto;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.flight{
+  display: flex;
+  border: 1px solid rgba(28, 27, 27, 0.3);
+  height: 8rem;
+}
+
+.class-prices{
+  display: flex;
+  width: 61%;
+}
+
+.class-price{
+  height: 100%;
+  width: 15rem;
+  border-right: 1px solid rgba(170, 165, 165, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.class-price h2{
+  font-weight: 400;
+}
+
+.flight-info{
+  height: 100%;
+  width: 39%;
+  display: flex;
+  flex-direction: column;
+}
+
+.flight-details-overall{
+  width: 100%;
+  height: 2rem;
+  background: var(--offwhite);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Flight Overview */
+
+.flight-overview-pg{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--offwhite);
+}
+
+.flight-book-navbar{
+  width: 100%;
+  height: 4rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.booking-process{
+  display: flex;
+  width: 92%;
+
+}
+
+.booking-step{
+  color: rgba(0, 0, 0, 0.4);
+  margin-right: 2.5rem;
+}
+
+.booking-step.active{
+  color: black;
+}
+
+.pg-title.flight-overview h1{
+  margin-bottom: 2rem;
+}
+
+.inpage-container{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  background: white;
+  box-shadow: rgba(77, 77, 77, 0.2) 0px 4px 8px;
+  margin-bottom: 2rem;
+}
+
+.flight-summary h3{
+  margin-bottom: 1.5rem;
+}
+
+.flight-summary p{
+  margin-bottom: 1rem;
+}
+
+.flight-summary-container{
+  height: 9rem;
+  width: 100%;
+  display: flex;
+  border: 1px solid rgba(153, 148, 148, 0.2);
+}
+
+.flight-route-details{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.mini-header{
+  width: 100%;
+  height: 2rem;
+  background: var(--offwhite);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mini-header p{
+  margin-bottom: 0;
+}
+
+.passenger-choice-details{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.inline-text{
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.small-text{
+  width: 90%;
+  font-size: 0.8rem;
+}
+
+.price-summary{
+  width: 50%;
+}
+
+.price-breakdown-container{
+  width: 100%;
+  margin-top: 0.5rem;
+}
+
+.price-breakdown-container p{
+  padding: 0.5rem 0;
+  width: 100%;
+  font-size: 0.8rem;
+}
+
+.underlined{
+  border-bottom: 1px solid rgba(153, 148, 148, 0.2);
+  margin-bottom: 1rem;
+}
+
+.flight-price{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.flight-price h3{
+  font-size: 0.8rem;
+  margin-bottom: 0.5rem;
+}
+
+.price{
+  width: 100%;
+}
+
+.price p{
+  width: auto;
+}
+
+.total{
+  border-top: 2px solid rgba(20, 20, 20, 0.8);
+  padding-top: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.continue-btns{
+  margin-top: 3rem;
+}
+
+.continue-btn.guest{
+  background: none;
+  border: none;
+  font-size: 1rem;
+  text-decoration: underline;
+  color: var(--lightblue);
+  margin-right: 3rem;
+  cursor: pointer;
+}
+
+.continue-btn.guest:active{
+  color: var(--blue);
+}
+
+.continue-btn.member{
+  font-size: 1rem;
+  color: white;
+  border: none;
+  background: var(--lightblue);
+  padding: 0.9rem 1.7rem;
+  cursor: pointer;
+}
+
+.continue-btn.member:active{
+  background: var(--blue);
+}
+
+
+
+
+
